// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` build-only yarn: build 1`] = `
Array [
  Array [
    Object {
      "buildArgs": Array [
        "YARN_VERSION=1.22.4",
      ],
      "cache": "docker-build-cache",
      "cacheTags": Array [
        "latest",
        "1",
        "1.22",
      ],
      "dryRun": undefined,
      "image": "yarn",
      "imagePrefix": "renovate",
      "tag": "1.22.4",
    },
  ],
]
`;

exports[` build-only yarn: publish 1`] = `Array []`;

exports[` last-only dummy: build 1`] = `
Array [
  Array [
    Object {
      "buildArgs": Array [
        "IMAGE=slim",
        "DUMMY_VERSION=12",
      ],
      "cache": undefined,
      "cacheTags": Array [
        "slim",
      ],
      "dryRun": undefined,
      "image": "dummy",
      "imagePrefix": "renovate",
      "tag": "12-slim",
    },
  ],
]
`;

exports[` last-only dummy: publish 1`] = `
Array [
  Array [
    Object {
      "dryRun": undefined,
      "image": "dummy",
      "imagePrefix": "renovate",
      "tag": "12-slim",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "dummy",
      "imagePrefix": "renovate",
      "tag": "slim",
    },
  ],
]
`;

exports[` updates image yarn (dry-run): build 1`] = `
Array [
  Array [
    Object {
      "buildArgs": Array [
        "YARN_VERSION=1.22.4",
      ],
      "cache": "docker-build-cache",
      "cacheTags": Array [
        "latest",
        "1",
        "1.22",
      ],
      "dryRun": true,
      "image": "yarn",
      "imagePrefix": "renovate",
      "tag": "1.22.4",
    },
  ],
]
`;

exports[` updates image yarn (dry-run): publish 1`] = `
Array [
  Array [
    Object {
      "dryRun": true,
      "image": "yarn",
      "imagePrefix": "renovate",
      "tag": "1.22.4",
    },
  ],
  Array [
    Object {
      "dryRun": true,
      "image": "yarn",
      "imagePrefix": "renovate",
      "tag": "1",
    },
  ],
  Array [
    Object {
      "dryRun": true,
      "image": "yarn",
      "imagePrefix": "renovate",
      "tag": "1.22",
    },
  ],
  Array [
    Object {
      "dryRun": true,
      "image": "yarn",
      "imagePrefix": "renovate",
      "tag": "latest",
    },
  ],
]
`;

exports[` works dummy: build 1`] = `
Array [
  Array [
    Object {
      "buildArgs": Array [
        "DUMMY_VERSION=10",
      ],
      "cache": undefined,
      "cacheTags": Array [
        "latest",
      ],
      "dryRun": undefined,
      "image": "dummy",
      "imagePrefix": "renovate",
      "tag": "10",
    },
  ],
  Array [
    Object {
      "buildArgs": Array [
        "DUMMY_VERSION=13",
      ],
      "cache": undefined,
      "cacheTags": Array [
        "latest",
      ],
      "dryRun": undefined,
      "image": "dummy",
      "imagePrefix": "renovate",
      "tag": "13",
    },
  ],
]
`;

exports[` works dummy: publish 1`] = `
Array [
  Array [
    Object {
      "dryRun": undefined,
      "image": "dummy",
      "imagePrefix": "renovate",
      "tag": "10",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "dummy",
      "imagePrefix": "renovate",
      "tag": "13",
    },
  ],
]
`;

exports[` works gradle: build 1`] = `
Array [
  Array [
    Object {
      "buildArgs": Array [
        "GRADLE_VERSION=3.5.5",
      ],
      "cache": undefined,
      "cacheTags": Array [
        "latest",
        "3",
        "3.5",
      ],
      "dryRun": undefined,
      "image": "gradle",
      "imagePrefix": "renovate",
      "tag": "3.5.5",
    },
  ],
  Array [
    Object {
      "buildArgs": Array [
        "GRADLE_VERSION=4.5",
      ],
      "cache": undefined,
      "cacheTags": Array [
        "latest",
        "4",
      ],
      "dryRun": undefined,
      "image": "gradle",
      "imagePrefix": "renovate",
      "tag": "4.5",
    },
  ],
  Array [
    Object {
      "buildArgs": Array [
        "GRADLE_VERSION=6.0",
      ],
      "cache": undefined,
      "cacheTags": Array [
        "latest",
        "6",
      ],
      "dryRun": undefined,
      "image": "gradle",
      "imagePrefix": "renovate",
      "tag": "6.0",
    },
  ],
]
`;

exports[` works gradle: publish 1`] = `
Array [
  Array [
    Object {
      "dryRun": undefined,
      "image": "gradle",
      "imagePrefix": "renovate",
      "tag": "3.5.5",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "gradle",
      "imagePrefix": "renovate",
      "tag": "3",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "gradle",
      "imagePrefix": "renovate",
      "tag": "3.5",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "gradle",
      "imagePrefix": "renovate",
      "tag": "4.5",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "gradle",
      "imagePrefix": "renovate",
      "tag": "4",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "gradle",
      "imagePrefix": "renovate",
      "tag": "6.0",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "gradle",
      "imagePrefix": "renovate",
      "tag": "6",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "gradle",
      "imagePrefix": "renovate",
      "tag": "latest",
    },
  ],
]
`;

exports[` works helm 1`] = `
Array [
  Array [
    Object {
      "datasource": "github-releases",
      "depName": "helm",
      "extractVersion": "^v(?<version>.*)$",
      "lookupName": "helm/helm",
      "versioning": undefined,
    },
  ],
]
`;

exports[` works helm: build 1`] = `
Array [
  Array [
    Object {
      "buildArgs": Array [
        "HELM_VERSION=3.4.0",
      ],
      "cache": undefined,
      "cacheTags": Array [
        "latest",
        "3.4",
      ],
      "dryRun": undefined,
      "image": "helm",
      "imagePrefix": "renovate",
      "tag": "3.4.0",
    },
  ],
  Array [
    Object {
      "buildArgs": Array [
        "HELM_VERSION=3.7.0",
      ],
      "cache": undefined,
      "cacheTags": Array [
        "latest",
      ],
      "dryRun": undefined,
      "image": "helm",
      "imagePrefix": "renovate",
      "tag": "3.7.0",
    },
  ],
  Array [
    Object {
      "buildArgs": Array [
        "HELM_VERSION=3.7.1",
      ],
      "cache": undefined,
      "cacheTags": Array [
        "latest",
        "3",
        "3.7",
      ],
      "dryRun": undefined,
      "image": "helm",
      "imagePrefix": "renovate",
      "tag": "3.7.1",
    },
  ],
]
`;

exports[` works helm: publish 1`] = `
Array [
  Array [
    Object {
      "dryRun": undefined,
      "image": "helm",
      "imagePrefix": "renovate",
      "tag": "3.4.0",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "helm",
      "imagePrefix": "renovate",
      "tag": "3.4",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "helm",
      "imagePrefix": "renovate",
      "tag": "latest",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "helm",
      "imagePrefix": "renovate",
      "tag": "3.7.0",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "helm",
      "imagePrefix": "renovate",
      "tag": "3.7.1",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "helm",
      "imagePrefix": "renovate",
      "tag": "3",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "helm",
      "imagePrefix": "renovate",
      "tag": "3.7",
    },
  ],
]
`;

exports[` works java: build 1`] = `
Array [
  Array [
    Object {
      "buildArgs": Array [
        "JAVA_VERSION=8.0.302+8",
      ],
      "cache": undefined,
      "cacheTags": Array [
        "latest",
        "8",
        "8.0",
      ],
      "dryRun": undefined,
      "image": "java",
      "imagePrefix": "renovate",
      "tag": "8.0.302",
    },
  ],
  Array [
    Object {
      "buildArgs": Array [
        "JAVA_VERSION=11.0.12+7",
      ],
      "cache": undefined,
      "cacheTags": Array [
        "latest",
        "11",
        "11.0",
      ],
      "dryRun": undefined,
      "image": "java",
      "imagePrefix": "renovate",
      "tag": "11.0.12",
    },
  ],
  Array [
    Object {
      "buildArgs": Array [
        "JAVA_VERSION=16.0.2+9",
      ],
      "cache": undefined,
      "cacheTags": Array [
        "latest",
        "16",
        "16.0",
      ],
      "dryRun": undefined,
      "image": "java",
      "imagePrefix": "renovate",
      "tag": "16.0.2",
    },
  ],
]
`;

exports[` works java: publish 1`] = `
Array [
  Array [
    Object {
      "dryRun": undefined,
      "image": "java",
      "imagePrefix": "renovate",
      "tag": "8.0.302",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "java",
      "imagePrefix": "renovate",
      "tag": "8",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "java",
      "imagePrefix": "renovate",
      "tag": "8.0",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "java",
      "imagePrefix": "renovate",
      "tag": "11.0.12",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "java",
      "imagePrefix": "renovate",
      "tag": "11",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "java",
      "imagePrefix": "renovate",
      "tag": "11.0",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "java",
      "imagePrefix": "renovate",
      "tag": "16.0.2",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "java",
      "imagePrefix": "renovate",
      "tag": "16",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "java",
      "imagePrefix": "renovate",
      "tag": "16.0",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "java",
      "imagePrefix": "renovate",
      "tag": "latest",
    },
  ],
]
`;

exports[` works pnpm: build 1`] = `
Array [
  Array [
    Object {
      "buildArgs": Array [
        "IMAGE=slim",
        "PNPM_VERSION=5.0.0",
      ],
      "cache": undefined,
      "cacheTags": Array [
        "slim",
        "5-slim",
        "5.0-slim",
      ],
      "dryRun": undefined,
      "image": "pnpm",
      "imagePrefix": "ghcr.io/renovatebot",
      "tag": "5.0.0-slim",
    },
  ],
]
`;

exports[` works pnpm: publish 1`] = `
Array [
  Array [
    Object {
      "dryRun": undefined,
      "image": "pnpm",
      "imagePrefix": "ghcr.io/renovatebot",
      "tag": "5.0.0-slim",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "pnpm",
      "imagePrefix": "ghcr.io/renovatebot",
      "tag": "5-slim",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "pnpm",
      "imagePrefix": "ghcr.io/renovatebot",
      "tag": "5.0-slim",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "pnpm",
      "imagePrefix": "ghcr.io/renovatebot",
      "tag": "slim",
    },
  ],
]
`;

exports[` works ubuntu: build 1`] = `
Array [
  Array [
    Object {
      "buildArgs": Array [
        "UBUNTU_VERSION=bionic",
      ],
      "cache": undefined,
      "cacheTags": Array [
        "latest",
        "18",
        "18.4",
      ],
      "dryRun": undefined,
      "image": "ubuntu",
      "imagePrefix": "renovate",
      "tag": "bionic",
    },
  ],
  Array [
    Object {
      "buildArgs": Array [
        "UBUNTU_VERSION=focal",
      ],
      "cache": undefined,
      "cacheTags": Array [
        "latest",
        "20",
        "20.4",
      ],
      "dryRun": undefined,
      "image": "ubuntu",
      "imagePrefix": "renovate",
      "tag": "focal",
    },
  ],
]
`;

exports[` works ubuntu: publish 1`] = `
Array [
  Array [
    Object {
      "dryRun": undefined,
      "image": "ubuntu",
      "imagePrefix": "renovate",
      "tag": "bionic",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "ubuntu",
      "imagePrefix": "renovate",
      "tag": "18",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "ubuntu",
      "imagePrefix": "renovate",
      "tag": "18.4",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "ubuntu",
      "imagePrefix": "renovate",
      "tag": "focal",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "ubuntu",
      "imagePrefix": "renovate",
      "tag": "20",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "ubuntu",
      "imagePrefix": "renovate",
      "tag": "20.4",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "ubuntu",
      "imagePrefix": "renovate",
      "tag": "latest",
    },
  ],
]
`;

exports[` works yarn: build 1`] = `
Array [
  Array [
    Object {
      "buildArgs": Array [
        "YARN_VERSION=1.22.4",
      ],
      "cache": "docker-build-cache",
      "cacheTags": Array [
        "latest",
        "1",
        "1.22",
      ],
      "dryRun": undefined,
      "image": "yarn",
      "imagePrefix": "renovate",
      "tag": "1.22.4",
    },
  ],
]
`;

exports[` works yarn: publish 1`] = `
Array [
  Array [
    Object {
      "dryRun": undefined,
      "image": "yarn",
      "imagePrefix": "renovate",
      "tag": "1.22.4",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "yarn",
      "imagePrefix": "renovate",
      "tag": "1",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "yarn",
      "imagePrefix": "renovate",
      "tag": "1.22",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "yarn",
      "imagePrefix": "renovate",
      "tag": "latest",
    },
  ],
]
`;
